Snapping doesn't work when looking through another object with backface culling #79144

Closed
opened 2020-07-21 18:40:30 +02:00 by slowburn · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon (TM) RX 470 Graphics ATI Technologies Inc. 4.5.13587 Core Profile Context 20.3.1 26.20.15029.15007

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-20 20:08, hash: 731d9f0bfa

Short description of error
When looking through the backside of an object with backface culling enabled, snapping doesn't work on objects that are behind it.

snap.jpg

In this example snapping doesn't work on the cube in the right viewport. Although it is still possible to snap to the corners of the plane.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon (TM) RX 470 Graphics ATI Technologies Inc. 4.5.13587 Core Profile Context 20.3.1 26.20.15029.15007 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-20 20:08, hash: `731d9f0bfa` **Short description of error** When looking through the backside of an object with backface culling enabled, snapping doesn't work on objects that are behind it. ![snap.jpg](https://archive.blender.org/developer/F8711799/snap.jpg) In this example snapping doesn't work on the cube in the right viewport. Although it is still possible to snap to the corners of the plane.
Author

Added subscriber: @slowburn

Added subscriber: @slowburn

Added subscribers: @mano-wii, @iss

Added subscribers: @mano-wii, @iss

@mano-wii Should this work or is this feature request?

@mano-wii Should this work or is this feature request?

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

The snap system has its own "Backface Culling" option:
image.png

I don't remember what the reasons were, but it was intentional.
I have no problem removing that option and matching it to the viewport.

@JulienKaspar, do you remember the reasons for being a separate option?

The snap system has its own "Backface Culling" option: ![image.png](https://archive.blender.org/developer/F8713647/image.png) I don't remember what the reasons were, but it was intentional. I have no problem removing that option and matching it to the viewport. @JulienKaspar, do you remember the reasons for being a separate option?
Author

I think the option in the snapping menu was added for better retopology workflow - to prevent accidental snapping to backfacing geometry with solid shading. But if "Backface Culling" in enabled in shading menu but disabled in snapping menu, it gets confusing. In my example I can see the cube but can't snap onto the front facing geometry, because the plane in front is treated as a primary snapping target, even though it's technically invisible. So maybe backface culling should be silently enabled for snapping if it is enabled in the shading menu? That would create a more intuitive behaviour.

I think the option in the snapping menu was added for better retopology workflow - to prevent accidental snapping to backfacing geometry with solid shading. But if "Backface Culling" in enabled in shading menu but disabled in snapping menu, it gets confusing. In my example I can see the cube but can't snap onto the front facing geometry, because the plane in front is treated as a primary snapping target, even though it's technically invisible. So maybe backface culling should be silently enabled for snapping if it is enabled in the shading menu? That would create a more intuitive behaviour.

This issue was referenced by 921c95ab5e

This issue was referenced by 921c95ab5e4473f85c74cab3609917c4c2309c6a

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-07-22 17:00:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79144
No description provided.