Fix T79144: Snapping bypassing the viewport backface culling

Silently activate the backface culling when the viewport is using.